# SimpleChatApp

./: .gitignore  GUARDRAILS_TEST_EXAMPLES.md  HowTo.md  LC_HowTo.md  README_CLIENT.md  Resources.md  TestingCode.py  check_async_validators.py  client.py  client_console.py  client_improved.py  client_session_manager.py  database.py  guardrails_middleware.py  langchain_service.py  langchain_service_stream.py  main.py  models.py  nlp_config.yml  pyproject.toml  routes.py  session_demo.py  test_fiscal_code.py  test_guardrails_effectiveness.py  test_pii_detection.py  test_restricttotopic.py
guards/: README.md  __init__.py  config.py  custom.py  direct_topic.py  italian_pii.py  messages.py  middleware.py  utils.py  validators.py
